<resources>
    <string name="app_name">Perfume Store</string>
    <string name="shop_name">Perfume Store</string>
    <string name="user_name">Enter your name</string>
    <string name="button_text">Cart</string>
    <string name="button_exit">Exit</string>
    <string name="image_desc">This is image</string>
    <string name="total_perfume">Total perfume:</string>
    <string name="add_to_card">Add to cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="databases">Databases</string>
    <string name="check_our_shops">Check our shops</string>
    <string name="i_am_lucky">I am lucky!</string>
    <string name="discounts">Discounts</string>
    <string name="store">Store</string>
    <string name="perfumes_to_show">Perfumes to show..</string>
    <string name="_300">300</string>

    <string name="add_word">Add perfume</string>
    <string name="hint_word">Perfume...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Perfume not saved because it is empty.</string>
    <string name="price">Price...</string>
    <string name="title_activity_external_data">ExternalDataActivity</string>
</resources>