<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user_image_view"
        android:contentDescription="@string/image_desc"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:src="@drawable/logo_image" />

    <TextView
        android:id="@+id/user_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:text="@string/shop_name"
        android:textAlignment="center"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/user_name_text_view1"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="90dp"
        android:hint="@string/user_name"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:textSize="30sp"
        android:text="@string/button_text" />
</LinearLayout>