<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user_image_view"
        android:contentDescription="@string/image_desc"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:src="@drawable/logo_image" />

    <TextView
        android:id="@+id/user_name_text_view"
        android:layout_below="@id/user_image_view"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:text="@string/shop_name"
        android:textAlignment="center"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/user_name_text_view1"
        android:layout_below="@id/user_name_text_view"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:hint="@string/user_name"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_lets_shop"
        android:layout_below="@id/user_name_text_view1"
        android:layout_width="200dp"
        android:layout_height="108dp"
        android:layout_marginStart="9dp"
        android:text="@string/button_text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="200dp"
        android:layout_height="108dp"
        android:layout_below="@id/user_name_text_view1"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_toEndOf="@id/button_lets_shop"
        android:text="@string/button_exit"
        android:textSize="40sp" />
</RelativeLayout>