<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_shopping_cart"
    tools:context=".ui.Fragment.ContentFragment">

    <Button
        android:id="@+id/button_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:text="@string/button_exit"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/user_image_view_bottom"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/_551570"
        app:layout_constraintBottom_toTopOf="@id/button_exit" />

    <TextView
        android:id="@+id/total_perfume_text"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/total_perfume"
        android:textSize="50sp"
        android:textAlignment="center" />

</androidx.constraintlayout.widget.ConstraintLayout>